@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.45 2005/01/19 08:07:19 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.46 2005/01/19 08:14:17 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  19 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Updated TODO. swapon failure it temporarily not an error.
 
   19 Jan 2005; Preston Cody <codeman@gentoo.org>
   Various fixes related to the add_users function.  Still not yet finished.
